[project]
name = "yak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "altgraph==0.17.3",
    "anyio==3.7.1",
    "beautifulsoup4==4.12.2",
    "brotli==1.0.9",
    "certifi==2022.12.7",
    "cffi==1.15.1",
    "chardet==3.0.4",
    "charset-normalizer==3.1.0",
    "click==8.1.3",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "cryptography==41.0.3",
    "csscompressor==0.9.5",
    "datauri==1.0.0",
    "deprecated==1.2.14",
    "deprecation==2.1.0",
    "diff-match-patch==20230430",
    "dunamai==1.17.0",
    "et-xmlfile==1.1.0",
    "exceptiongroup==1.1.2",
    "feedparser==6.0.11",
    "flatbuffers==23.5.26",
    "funcy==2.0",
    "googletrans==3.1.0a0",
    "gtts==2.3.2",
    "h11==0.9.0",
    "h2==3.2.0",
    "hpack==3.0.0",
    "hstspreload==2023.1.1",
    "htmlmin==0.1.12",
    "httpcore==0.9.1",
    "httpx==0.13.3",
    "humanfriendly==10.0",
    "hyperframe==5.2.0",
    "idna==2.10",
    "imageio==2.27.0",
    "imageio-ffmpeg==0.4.8",
    "importlib-metadata==6.6.0",
    "iniconfig==2.0.0",
    "jaconv==0.3.4",
    "jeraconv==0.2.1",
    "jinja2==3.1.2",
    "jinja2-ansible-filters==1.3.2",
    "jsmin==3.0.1",
    "keyboard==0.13.5",
    "lxml==4.9.2",
    "magika==0.5.0",
    "markdown==3.5.1",
    "markupsafe==2.1.3",
    "mdx-truly-sane-lists==1.3",
    "mistune==2.0.5",
    "mouseinfo==0.1.3",
    "moviepy==1.0.3",
    "mpmath==1.3.0",
    "mutagen==1.46.0",
    "numpy==1.26.4",
    "oauthlib==3.2.2",
    "onnxruntime==1.17.0",
    "opencv-python==4.7.0.72",
    "openpyxl==3.1.2",
    "ordered-set==4.1.0",
    "packaging==23.1",
    "pathspec==0.11.1",
    "pefile==2023.2.7",
    "pillow==9.5.0",
    "pillow-heif==0.14.0",
    "pip-licenses==4.3.2",
    "playsound==1.2.2",
    "pluggy==1.3.0",
    "plumbum==1.8.2",
    "prettytable==3.8.0",
    "proglog==0.1.10",
    "prompt-toolkit==3.0.39",
    "protobuf==4.25.3",
    "psutil==5.9.5",
    "pyautogui==0.9.53",
    "pycparser==2.21",
    "pycryptodome==3.18.0",
    "pycryptodomex==3.17",
    "pydantic==1.10.11",
    "pygetwindow==0.0.9",
    "pygments==2.17.2",
    "pyinstaller==5.10.1",
    "pyinstaller-hooks-contrib==2023.2",
    "pykakasi==2.2.1",
    "pymsgbox==1.0.9",
    "pynput==1.6.8",
    "pyotp==2.9.0",
    "pypdf==3.15.2",
    "pyperclip==1.8.2",
    "pypng==0.20220715.0",
    "pyreadline3==3.4.1",
    "pyrect==0.2.0",
    "pyscreeze==0.1.28",
    "pystray==0.19.4",
    "pytesseract==0.3.10",
    "pytest==7.4.3",
    "python-dotenv==1.0.1",
    "pytweening==1.0.5",
    "pywin32==306",
    "pywin32-ctypes==0.2.0",
    "pyyaml==6.0",
    "pyyaml-include==1.3.1",
    "pyzipper==0.3.6",
    "qrcode==7.4.2",
    "questionary==1.10.0",
    "randomuser==1.6",
    "repath==0.9.0",
    "requests==2.31.0",
    "rfc3986==1.5.0",
    "sgmllib3k==1.0.0",
    "six==1.16.0",
    "sniffio==1.3.0",
    "soupsieve==2.4.1",
    "speechrecognition==3.10.0",
    "speedtest-cli==2.1.3",
    "sv-ttk==2.5.5",
    "svgwrite==1.4.3",
    "sympy==1.12",
    "tabulate==0.9.0",
    "tkinterdnd2==0.3.0",
    "tkinterweb==3.23.5",
    "tomli==2.0.1",
    "tqdm==4.65.0",
    "ttkthemes==3.2.2",
    "typing-extensions==4.5.0",
    "urllib3==2.2.0",
    "watchdog==3.0.0",
    "wcwidth==0.2.6",
    "websocket-client==1.6.1",
    "websockets==12.0",
    "win32-setctime==1.1.0",
    "winotify==1.1.0",
    "wrapt==1.15.0",
    "youtube-transcript-api==0.6.1",
    "yt-dlp==2024.3.10",
    "zipp==3.15.0",
]
